  o Added a Call Tip feature to the edit box, so it shows the function prototype as you type it. (AMZ)
  o Fixed glitches related to the Duration time edit box. (AMZ)
  o Tweaked the behavior of the margin boxes, now they no longer show padding zeros. (AMZ)
  o Actor and Effect fields now show a "ghosted" caption saying their name when they are not focused on and blank. (AMZ)
- Added a much-needed options dialog with all the relevant config.dat options in it. (AMZ)
- Various fixes to better handle paths/file names with non-ANSI characters on Windows (jfs/AMZ)
- Misc. fixes for building on Linux (Azzy, equinox, jfs)
- Added an option to automatically save the files whenever you change anything. (AMZ)
- Added global hotkey for Video Play (default Ctrl+P). (AMZ)
- Commiting changes in audio to the last line will insert a new line after it. (AMZ)
- Fonts collector can now collect fonts directly to a zipped archive; also, fixed behavior of the Escape key in it. (AMZ)
- Added two options that allows you to specify where to keep the audio cache. (AMZ)
- Improved Splash Screen behavior to show up even if the program is frozen loading subtitles, and to center on the current display. (AMZ)
- Aegisub now remembers if it was maximized when it was last quit, and restores its state when opening again. (AMZ)
- A few minor fixes to the Find dialogue regarding initial focus and the behavior of the Escape key. (AMZ)
- Added a "Selection Onward" option to the Shift Times dialogue. (AMZ)
- Added a Normal/Reverse dropdown to collisions on Script Properties. (AMZ)
- Implemented a version checker that can automatically or manually check if there are any updates to Aegisub. (AMZ)
- Timing Post-Processor can now be restricted to selection. (AMZ)
- Added Kanji Timing (AKA Karaoke Timing Copy) functionality. (Dansolo)
- Added an audio clip export by right clicking on a line. (Dansolo)
- Added a clear button for shifting history. (Dansolo)